# github-watchtower

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.cargo-husky/hooks/: pre-commit
.ci/: azure-pipelines.yml
.circleci/: config.yml
.github/workflows/: ci.yml
contrib/: Dockerfile
src/: config.rs  errors.rs  github.rs  gpg.rs  lib.rs  utils.rs
src/github/: commits.rs  endpoints.rs  link.rs
tests/: config.toml  github_commits.rs  github_endpoints.rs  lukas.pustina-invalid.pub  lukas.pustina.pub
