[package]
name = "github-watchtower"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.de>"]
edition = "2018"
description = "Check Run GitHub App ensuring commit are signed by legimit keys"
repository = "https://github.com/lukaspustina/github-watchtower.git"
readme = "README.md"
license = "MIT"
keywords = ["lambda", "api", "git", "security"]
categories = ["security"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
log = "0.4"
reqwest = { version = "^0.9", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "^0.6"
spectral = "^0.6"

