[package]
name = "github-watchtower"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.de>"]
edition = "2018"
description = "Check Run GitHub App ensuring commit are signed by legimit keys"
repository = "https://github.com/lukaspustina/github-watchtower.git"
readme = "README.md"
license = "MIT"
keywords = ["lambda", "api", "git", "security"]
categories = ["security"]

[dependencies]
clams = "^0.0.16"
clams-derive = "^0.0.6"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
hex = "0.3"
log = "0.4"
reqwest = { version = "^0.9", features = ["rustls-tls"] }
ring = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sequoia-openpgp = "0.8"
toml = "^0.5"

[dev-dependencies]
env_logger = "^0.6"
spectral = "^0.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

